# stocksim

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml
.github/: CODEOWNERS
stocksim/: __init__.py  stocks.py  window.py
tests/: __init__.py
